src/objects/Apttus_Config2__RelatedIncentive__c.object
<CustomObject>
    <description>Holds the relationships between incentives</description>
    <fields>
        <fullName>Apttus_Config2__FromIncentiveId__c</fullName>
        <description>ID of the related incentive (from)</description>
        <inlineHelpText>ID of the related incentive (from)</inlineHelpText>
        <label>Related Incentive (From)</label>
        <referenceTo>Apttus_Config2__Incentive__c</referenceTo>
        <relationshipLabel>Related Incentives (From)</relationshipLabel>
        <relationshipName>RelatedIncentivesFrom</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedIncentiveTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the related incentive (to)</description>
        <inlineHelpText>ID of the related incentive (to)</inlineHelpText>
        <label>Related Incentive (Deprecated)</label>
        <referenceTo>Apttus_Config2__Incentive__c</referenceTo>
        <relationshipLabel>Related Incentives (To)</relationshipLabel>
        <relationshipName>RelatedIncentivesTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelationType__c</fullName>
        <description>The relation type</description>
        <inlineHelpText>The relation type</inlineHelpText>
        <label>Relation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exclusion</fullName>
                    <default>true</default>
                    <label>Exclusion</label>
                </value>
                <value>
                    <fullName>Is Amended By</fullName>
                </value>
                <value>
                    <fullName>Is Renewed By</fullName>
                </value>
                <value>
                    <fullName>Is Amendment For</fullName>
                </value>
                <value>
                    <fullName>Is Renewal For</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ToIncentiveId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the related incentive (to)</description>
        <inlineHelpText>ID of the related incentive (to)</inlineHelpText>
        <label>Related Incentive (To)</label>
        <referenceTo>Apttus_Config2__Incentive__c</referenceTo>
        <relationshipLabel>Related Incentives (To)</relationshipLabel>
        <relationshipName>RelatedIncentivesTo2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Related Incentive</label>
    <nameField>
        <displayFormat>RI-{000000}</displayFormat>
        <label>Related Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Incentives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>